# wellenbrecher

./: Cargo.toml  README.md  firewall_elevated_shell.sh
gst-wellenbrecher-src/: Cargo.toml  README.md
gst-wellenbrecher-src/src/: lib.rs
gst-wellenbrecher-src/src/wbsrc/: imp.rs  mod.rs
kanal/: Cargo.toml
kanal/src/: cli.rs  main.rs
pfparse/: Cargo.toml
pfparse/benches/: naive_parser.rs
pfparse/src/: lib.rs
seebruecke/: Cargo.toml
seebruecke/src/: cli.rs  fragment.wgsl  lib.rs  main.rs  texture.rs  vertex.wgsl
wellenbrecher/: Cargo.toml
wellenbrecher-canvas/: Cargo.toml
wellenbrecher-canvas/src/: lib.rs
wellenbrecher-viewer/: Cargo.toml
wellenbrecher-viewer/src/: fragment.wgsl  lib.rs  main.rs
wellenbrecher/src/: canvas.rs  cli.rs  command.rs  command_ring.rs  firewall.rs  main.rs  worker.rs
wellenbrecher/src/ring/: command.rs  command_ring.rs  mod.rs  pixelflut_connection_handler.rs  pixelflut_ring_bridge.rs  ring_coordination.rs  write_buffer_drop.rs
