[workspace]

members = [
    "wellenbrecher",
    "wellenbrecher-canvas",
    "seebruecke",
    "kanal"
]

resolver = "2"

[profile.release]
opt-level = 3
debug = false
strip = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6.9"
thiserror = "1.0.50"

clap = { version = "4.4.8", features = ["derive"] }

shared_memory = "0.12.4"
