[package]
name = "kanal"
version = "0.1.0"
edition = "2021"
authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
license = 'GPL-3'

resolver = "2"

[dependencies]
wellenbrecher-canvas = { path = "../wellenbrecher-canvas" }

tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
clap.workspace = true

gstreamer = "0.21.2"
