[package]
name = "pfparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wellenbrecher-canvas = { path = "../wellenbrecher-canvas" }

rand = "0.8.5"
thiserror = "1.0.51"

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "naive_parser"
harness = false