[package]
name = "wellenbrecher-canvas"
version = "0.1.0"
edition = "2021"
license = 'GPL-3'
repository = "https://github.com/bits0rcerer/wellenbrecher"

resolver = "2"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
shared_memory.workspace = true

bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
