[package]
name = "wellenbrecher"
version = "0.1.0"
edition = "2021"
authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
description = "A capable Pixelflut server leveraging the linux io_uring interface"

resolver = "2"

[dependencies]
wellenbrecher-canvas = { path = "../wellenbrecher-canvas" }

tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
thiserror.workspace = true
clap.workspace = true
shared_memory.workspace = true

nftables = "0.2.4"
os_pipe = "1.1.4"

socket2 = "0.5.5"
io-uring = "0.6.2"
core_affinity = "0.8.1"

bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
smallvec = "1.11.2"

tokio = { version = "1.34.0", features = ["rt", "net", "macros", "signal", "io-util", "sync", "time"] }
tokio-util = "0.7.10"
tokio-pipe = "0.2.12"

paste = "1.0.14"
ctrlc = "3.4.1"

hyper = "1.0.1"
ring = "0.17.6"
take_mut = "0.2.2"
rand = "0.8.5"
