[package]
name = "wellenbrecher"
version = "0.1.0"
edition = "2021"
authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
description = "A capable Pixelflut server leveraging the linux io_uring interface"
license = 'GPL-3'

resolver = "2"

[dependencies]
wellenbrecher-canvas = { path = "../wellenbrecher-canvas" }
rummelplatz = { git = "https://github.com/bits0rcerer/rummelplatz", rev = "c91a14a2a9491cf37c8734a31452d0e11cb233fa" }

tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
thiserror.workspace = true
clap.workspace = true
shared_memory.workspace = true

nftables = "0.2.4"

socket2 = "0.5.5"
core_affinity = "0.8.1"

bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
smallvec = "1.11.2"

paste = "1.0.14"
libc = "0.2.150"
take_mut = "0.2.2"

rand = "0.8.5"
log = "0.4.20"
